--- a/PackDockExample/index.html
+++ b/PackDockExample/index.html
@@ -83,6 +83,27 @@ justify-content: center;
   display: flex;
   justify-content: space-around;  
 }
+#run_command{
+  /* width: 300px; */
+  /* min-height: 200px; */
+  background-color: grey;
+  position: absolute;
+  left: 40%;
+  top: 30%;
+}
+.cancel{
+  position: absolute;
+  right: 0;
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+}
+#commands{
+  margin: 20px;
+}
+th{
+  padding: 10px;
+}
   </style>
    <link rel="stylesheet"
    href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.css">
@@ -99,6 +120,11 @@ justify-content: center;
       <button id="button" onclick="pasteSel()">Paste</button>
       <button id="button" onclick="deleteSel()">Delete</button>
     </div>
+  </div>
+  <div id="run_command" style="visibility:hidden">
+      <div class="cancel" onclick="hide_run_command_dialog()">X</div>
+      <table id="commands">        
+      </table>
   </div>
   <div id="View">    
     <div style="display: flex;justify-content: space-evenly;color: black;font-weight: bold;cursor: pointer;font-size: 15px;" onclick="moveBackDir()">
@@ -117,8 +143,8 @@ justify-content: center;
       </div>
       <div class="command_input">
         <div class="command">
-          <input type="text" placeholder="Write Command">
-          <button id="button">Run</button>
+          <input type="text" id="given_command" placeholder="Write Command">
+          <button id="button" onclick="run_given_command()">Run</button>
         </div>
         <div class="input" style="display: flex;flex-direction:row;">
           <div style="display: flex;flex-direction:column;justify-content: center;">
@@ -126,6 +152,9 @@ justify-content: center;
             <input type="text" placeholder="Write input">
           </div>
           <button id="button">Send Input</button>
+        </div>
+        <div>
+          <button id="button" onclick="show_running_commands()">Running commannds</button>
         </div>
       </div>
       <div class="command_output">
